react-app/src/components/AllListingsPage/AllListingsPage.css
.all-listings-container {
  max-width: 1440px;
  margin: 0 auto;
  padding: 20px;
  display: grid;
  justify-content: flex-start;
  align-content: center;
  grid-template-columns: repeat(4, 1fr);
  gap: 20px;
  width: 100%;
}
.listings-filter {
  max-width: 1440px;
  margin: 0 auto;
}

.all-listing-image:hover {
  /* width: 99%; */
  /* height: 500px; */
  object-fit: contain;
  /* border: 1px solid white; */
  /* border-radius: 10px; */
}

.single-listing-container {
  height: 500px;
  width: 100%;
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  justify-items: flex-start;
  align-items: flex-end;
  text-decoration: none;
  color: black;
}

.single-listing-container:hover {
  box-shadow: 0px 7px 12px -5px rgba(0, 0, 0, 0.75);
  background-color: #84734d;
  color: white;
}
.all-listings-info-container {
  align-self: flex-start;
}

.all-listings-info-container h3,
.all-listings-info-container h5 {
  align-self: flex-start;
  margin: 10px;
  padding: 0;
}

